
syntax = "proto3";

package proto;

import "proto/api/v1/user.proto";

option go_package = "./protogen";


message Country {
  int64 id = 1;
  string name = 2;
}

message CountryName {
  string name = 1;
}

service CountryService {
  rpc GetCountryByName(CountryName) returns (Country);
}